# api/swagger-output.json
@@ -2363,7 +2363,7 @@
           "게시판"
         ],
         "summary": "게시글 등록",
-        "description": "게시글을 등록한다.",
+        "description": "게시글을 등록합니다.",
         "responses": {
           "200": {
             "description": "OK"
@@ -2415,13 +2415,10 @@
           }
         ],
         "requestBody": {
-          "description": "게시글 정보가 저장된 객체입니다.<br>모든 속성은 선택사항이고 필요에 맞게 아무 속성이나 추가하면 됩니다.<br>title, content는 게시글 키워드 검색에 사용되는 속성입니다.<br>type: 게시판 종류(선택, 생략시 post). 게시판을 구분할 수 있는 이름<br>product_id: 상품 id(선택). 상품과 관련된 게시글일 경우 필요<br>title: 제목(선택)<br>content: 내용(선택)",
+          "description": "게시글 정보가 저장된 객체입니다.<br>   모든 속성은 선택사항입니다.<br>   type, title, content, tag 속성은 목록 조회에서 확인할 수 있습니다.<br>   이외에 지정된 속성은 상세 조회에서만 확인할 수 있습니다.<br>   type: 게시판 종류를 나타내고 게시판을 구분할 수 있는 이름이며 자유롭게 지정할 수 있고 게시물 목록 조회시 전달해야 합니다.(생략시 post)<br>   title: 제목(키워드 검색에 사용)<br>   content: 내용(키워드 검색에 사용)<br>   tag: 태그(키워드 검색에 사용)<br>   product_id: 상품 id를 나타내고 상품과 관련된 게시글일 경우에 어떤 상품에 대한 게시글인지 식별하기 위해 필요합니다.",
           "required": true,
           "content": {
             "application/json": {
-              "schema": {
-                "$ref": "#components/schemas/postCreateBody"
-              },
               "examples": {
                 "일반 게시판": {
                   "$ref": "#/components/examples/createPostExample"
@@ -2453,7 +2450,7 @@
           },
           {
             "name": "keyword",
-            "description": "검색어<br>제목과 내용 검색에 사용되는 키워드",
+            "description": "검색어<br>제목, 내용, 태그 검색에 사용되는 키워드",
             "in": "query",
             "example": "배송",
             "schema": {
@@ -7591,27 +7588,6 @@
           }
         }
       },
-      "postCreateBody": {
-        "type": "object",
-        "properties": {
-          "type": {
-            "type": "string",
-            "example": "community"
-          },
-          "title": {
-            "type": "string",
-            "example": "여행 후기 입니다."
-          },
-          "content": {
-            "type": "string",
-            "example": "주말에 다녀온 여행지 입니다. 날씨가 맑아서 좋았어요."
-          },
-          "image": {
-            "type": "string",
-            "example": "sample-bugatti.png"
-          }
-        }
-      },
       "postCreateRes": {
         "type": "object",
         "properties": {
@@ -7637,6 +7613,10 @@
               "image": {
                 "type": "string",
                 "example": "sample-bugatti.png"
+              },
+              "tag": {
+                "type": "string",
+                "example": "혼자,떠나요,제주도"
               },
               "views": {
                 "type": "number",
@@ -8924,7 +8904,8 @@
           "type": "community",
           "title": "여행 후기 입니다.",
           "content": "주말에 다녀온 여행지 입니다. 날씨가 맑아서 좋았어요.",
-          "image": "sample-bugatti.png"
+          "image": "sample-bugatti.png",
+          "tag": "혼자,떠나요,제주도"
         }
       },
       "createPostQnAExample": {
